Bug 154122 - Applet placements shouldn't overlap
Summary: Applet placements shouldn't overlap
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 154357 154381 154543 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-15 18:37 UTC by András Manţia
Modified: 2007-12-24 03:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2007-12-15 18:37:09 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

As I see desktop icons appear now just like plasmoids. The problem is that they all appear in the center of the screen, one above the other.
Comment 1 Dan Meltzer 2007-12-20 18:18:03 UTC
*** Bug 154381 has been marked as a duplicate of this bug. ***
Comment 2 Jason Stubbs 2007-12-21 13:57:22 UTC
*** Bug 154357 has been marked as a duplicate of this bug. ***
Comment 3 Jason Stubbs 2007-12-22 13:33:10 UTC
SVN commit 751607 by jstubbs:

Try to place unpositioned applets in areas that aren't occupied using a very
simple placement policy.

BUG: 154122


 M  +50 -9     containment.cpp  
 M  +3 -0      containment.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751607
Comment 4 Jason Stubbs 2007-12-24 03:04:26 UTC
*** Bug 154543 has been marked as a duplicate of this bug. ***