Try to place unpositioned applets in areas that aren't occupied using a very simple placement policy.

BUG: 154122

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=751607